cicd/k8s/backend/backend-deployment-new.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment-new
spec:
  selector:
    matchLabels:
      type: backend
      ver: v11
  replicas: 2
  strategy:
    type: RollingUpdate
  minReadySeconds: 10
  template:
    metadata:
      labels:
        type: backend
        ver: v11
    spec:
      containers:
        - name: backend-new
          image: simkids/backend:1.21
          readinessProbe:
            httpGet:
              path: /test
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 3
          livenessProbe:
            httpGet:
              path: /test
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
      terminationGracePeriodSeconds: 0
