cicd/k8s/backend/backend-svc-new.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc-new
spec:
  selector:
    type: backend
    ver: v11
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
