cicd/k8s/backend/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  labels:
    app: backend
    canary-version: old

spec:
  selector:
    type: backend
    ver: v1
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
