cicd/k8s/backend/backend-ingress-new.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress-new
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-svc-new
                port:
                  number: 8080
